<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.admin.ui.fragments.HomeAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">
        <TextView
            android:textColor="@color/title_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_title" />
        <TableLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/base_round_1">
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="158dp"
                    android:layout_height="95dp"
                    android:orientation="vertical"
                    android:background="@drawable/base_round_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_users"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/totalUsers"
                        android:fontFamily="@font/nunito_bold"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="158dp"
                    android:layout_height="95dp"
                    android:orientation="vertical"
                    android:background="@drawable/base_round_2">
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_agents"/>
                    <TextView
                        android:id="@+id/totalAgents"
                        android:fontFamily="@font/nunito_bold"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_marginVertical="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/base_round_1">
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="158dp"
                    android:layout_height="95dp"
                    android:orientation="vertical"
                    android:background="@drawable/base_round_2">
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/online_users"/>
                    <TextView
                        android:id="@+id/onlineUsers"
                        android:fontFamily="@font/nunito_bold"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="158dp"
                    android:layout_height="95dp"
                    android:orientation="vertical"
                    android:background="@drawable/base_round_2">
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_response_time"/>
                    <TextView
                        android:id="@+id/averageresponsetime"
                        android:fontFamily="@font/nunito_bold"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <TextView
            android:textColor="@color/title_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_traffic"
            />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart1"
            android:background="@drawable/base_round_2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:minHeight="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textColor="@color/title_color"
            android:layout_marginVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_messages_processed" />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart2"
            android:background="@drawable/base_round_2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="200dp"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>