<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cse_411_project.aigy.khanh.activity.AccountInformationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/button_white_border"
            android:contentDescription="back"
            android:padding="20dp"
            app:srcCompat="@drawable/back"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txt_preferences"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/account_information"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="20dp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:paddingHorizontal="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:background="@drawable/plain_text_border"
            android:drawableStart="@drawable/user_icon"
            android:drawableEnd="@drawable/edit"
            android:drawablePadding="10dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="30dp"
            android:padding="20dp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:background="@drawable/plain_text_border"
            android:drawableStart="@drawable/email_icon"
            android:drawableEnd="@drawable/edit"
            android:drawablePadding="10dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:background="@drawable/plain_text_border"
            android:drawableEnd="@drawable/edit"
            android:drawableStart="@drawable/phone_icon"
            android:layout_marginBottom="30dp"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="20dp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <FrameLayout
    android:layout_width="0dp"
    android:paddingHorizontal="30dp"
    android:layout_marginBottom="50dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/btn_save_changes"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_black_border"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        tools:ignore="HardcodedText"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"/>
</FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>